# Deep-learning-math-kernel-research

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NOTATION  README  README.md  TODO
cmake/: flags.cmake  required.cmake
docs/: fusion.txt
include/: euler.hpp  euler_reorder.hpp
script/: best_config.sh  run.sh  test_conv_execute_mode.sh
scripts/: conv-non-16x.sh  regression-fp32.sh  run.sh  test_conv_execute_mode.sh
scripts/best_configs/: common.sh  conv-1x1-int8.sh  conv-1x1-p.sh  conv-1x1.sh  googlenetv3-n1-8180-1s-wino-f2_3.sh  googlenetv3-n1-8180-1s-wino-f3_3.sh  googlenetv3-n1-8180-1s-wino-f4_3.sh  googlenetv3-n1-8180-1s-wino-f5_3.sh  googlenetv3-n1-8180-2s-wino-f3_3.sh  googlenetv3-n1-8180-2s-wino-f4_3.sh  googlenetv3-n1-8180-2s-wino-f5_3.sh  googlenetv3-n64-8180-1s-wino-f2_3.sh  googlenetv3-n64-8180-1s-wino-f3_3.sh  googlenetv3-n64-8180-1s-wino-f4_3.sh  googlenetv3-n64-8180-1s-wino-f5_3.sh  googlenetv3-n64-8180-2s-wino-f3_3.sh  googlenetv3-n64-8180-2s-wino-f4_3.sh  googlenetv3-n64-8180-2s-wino-f5_3.sh  group-conv.sh  mobilenetv1-n1-clx-1s-int8.sh  mobilenetv1-n64-clx-1s-int8.sh  resnet-n1-8180-1s-direct-1x1-int8.sh  resnet-n1-8180-1s-direct-1x1.sh  resnet-n1-8180-1s-direct-int8.sh  resnet-n1-8180-1s-direct-nhwc.sh  resnet-n1-8180-1s-direct.sh  resnet-n1-8180-1s-int8-rd.sh  resnet-n1-8180-1s-int8.sh  resnet-n1-8180-1s-wino-f2_3.sh  resnet-n1-8180-1s-wino-f3_3.sh  resnet-n1-8180-1s-wino-f4_3.sh  resnet-n1-8180-1s-wino-f5_3.sh  resnet-n1-8180-1s-wino-int8.sh  resnet-n1-8180-1s.sh  resnet-n1-8180-1s_3x3.sh  resnet-n1-8180-1s_5x3.sh  resnet-n1-8180-2s-wino-f2_3.sh  resnet-n1-8180-2s-wino-f3_3.sh  resnet-n1-8180-2s-wino-f4_3.sh  resnet-n1-8180-2s-wino-f5_3.sh  (+70 more)
src/: el_convolution.cpp  el_def.hpp  el_init.cpp  el_init.hpp  el_intrin.hpp  el_isa.hpp  el_mdarray.hpp  el_parallel.hpp  el_stl.hpp  el_utils.hpp  eld_conv.cpp  elk_conv.cpp  elk_conv.hpp  elk_conv_direct_1x1.cpp  elk_conv_direct_1x1.hpp  elk_conv_gemm.cpp  elk_conv_input.cpp  elk_conv_output.cpp  elk_conv_weights.cpp  elk_conv_wino.cpp  elk_conv_wino.hpp  elk_convolution.cpp  elk_cosim.hpp  elx_conv.cpp  elx_conv.hpp  elx_conv_direct.cpp  elx_conv_direct.hpp  elx_conv_direct_1x1.cpp  elx_conv_direct_1x1.hpp  elx_conv_direct_1x1_bind.cpp  elx_conv_direct_1x1_bind.hpp  elx_conv_direct_1x1_lp.cpp  elx_conv_direct_1x1_lp.hpp  elx_conv_direct_1x1_lp_bind.cpp  elx_conv_direct_1x1_lp_xopt.cpp  elx_conv_direct_1x1_xopt.cpp  elx_conv_direct_1x1_xopt.hpp  elx_conv_direct_bind.cpp  elx_conv_direct_bind.hpp  elx_conv_direct_depthwise_lp.cpp  (+78 more)
src/common/: el_allocator.hpp  el_def.hpp  el_intrin.hpp  el_log.cpp  el_log.hpp  el_mdarray.hpp  el_parallel.hpp  el_shared_workspace.hpp  el_stl.hpp  el_utils.hpp
src/kernel/: elk_conv.hxx  elk_conv_binder.hxx  elk_conv_direct_1x1_gemm.hxx  elk_conv_direct_1x1_gemm_1x.hxx  elk_conv_direct_1x1_gemm_8x.hxx  elk_conv_direct_1x1_gemm_O.hxx  elk_conv_direct_1x1_gemm_OT.hxx  elk_conv_direct_1x1_gemm_OTJ.hxx  elk_conv_direct_1x1_gemm_TJ.hxx  elk_conv_direct_1x1_gemm_Tr.hxx  elk_conv_direct_1x1_gemm_jam_Or.hxx  elk_conv_direct_1x1_gemm_s1.hxx  elk_conv_direct_1x1_gemm_s1_ccc.hxx  elk_conv_direct_1x1_gemm_s1_ccs.hxx  elk_conv_direct_1x1_gemm_s1_sss.hxx  elk_conv_direct_1x1_gemm_s2.hxx  elk_conv_direct_1x1_gemm_s2_sss.hxx  elk_conv_gen.sh  elk_conv_otj.hxx  elk_conv_otj_binder.hxx  elk_conv_wino.hpp  elk_conv_wino_2x2_3x3_input.hpp  elk_conv_wino_2x2_3x3_input.hxx  elk_conv_wino_2x2_3x3_input_gen.hxx  elk_conv_wino_2x2_3x3_input_perf.hxx  elk_conv_wino_2x2_3x3_output.hpp  elk_conv_wino_2x2_3x3_output.hxx  elk_conv_wino_2x2_3x3_output_gen.hxx  elk_conv_wino_2x2_3x3_weights.hpp  elk_conv_wino_2x2_3x3_weights.hxx  elk_conv_wino_2x2_3x3_weights_gen.hxx  elk_conv_wino_3x3_3x3_input.hpp  elk_conv_wino_3x3_3x3_input.hxx  elk_conv_wino_3x3_3x3_input_gen.hxx  elk_conv_wino_3x3_3x3_output.hpp  elk_conv_wino_3x3_3x3_output.hxx  elk_conv_wino_3x3_3x3_output_gen.hxx  elk_conv_wino_3x3_3x3_weights.hpp  elk_conv_wino_3x3_3x3_weights.hxx  elk_conv_wino_3x3_3x3_weights_gen.hxx  (+75 more)
test/: CMakeLists.txt  elt_conv.cpp  elt_conv_utils.cpp  elt_conv_utils.hpp  elt_utils.cpp  elt_utils.hpp
test/unitests/: elk_gemm.cpp  elk_trans_input.cpp  elk_trans_output.cpp  elk_trans_weights.cpp  elt_gemm.cpp  elt_unitests.cpp  elt_unitests.hpp
tests/: CMakeLists.txt  elt_conv.cpp  elt_conv_gtest.cpp  elt_conv_utils.cpp  elt_conv_utils.hpp  elt_gflag.cpp  elt_gflag.hpp  elt_utils.hpp
tests/unitests/: elk_gemm.cpp  elk_trans_input.cpp  elk_trans_output.cpp  elk_trans_weights.cpp  elt_unitests.cpp  lest.hpp
tests/unittests/: CMakeLists.txt  elk_gemm.cpp  elk_trans_input.cpp  elk_trans_output.cpp  elk_trans_weights.cpp  elt_unitests.hpp  parameter_tuner.cpp
tests/unittests/gtest/: CMakeLists.txt
